# search-bot-rs

./: .env.example  .gitignore  Cargo.toml  Dockerfile  docker-compose.yml  migrate.env.example  migrate.toml.example
docker/elasticsearch/: Dockerfile  entrypoint.sh
src/: config.rs  error.rs  main.rs
src/bot/: callback.rs  commands.rs  handler.rs  message_recorder.rs  mod.rs
src/es/: client.rs  indexer.rs  mapping.rs  mod.rs  search.rs
src/models/: message.rs  mod.rs  user_cache.rs
