[package]
name = "search-bot-rs"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "search-bot-rs"
path = "src/main.rs"

[[bin]]
name = "migrate"
path = "src/bin/migrate.rs"

[dependencies]
# Telegram bot framework (with webhook support)
teloxide = { version = "0.17.0", features = ["macros", "webhooks-axum"] }

# Elasticsearch official client
elasticsearch = "8.5.0-alpha.1"

# MongoDB driver
mongodb = "3.1"
futures = "0.3"

# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Configuration
toml = "0.8"
dotenvy = "0.15"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# URL handling
url = "2"

# Concurrent hashmap for search sessions
dashmap = "6"
